--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "directory-drag-drop",
   "displayName": "Directory Drag Drop",
-  "description": "It restores old VS Code behaviour on dragging and dropping a folder to the editor area (it opens as a workspacec in the same window)",
+  "description": "It restores old VS Code behavior on dragging and dropping a folder to the editor area (it opens as a workspace in the same window)",
   "version": "0.0.1",
   "engines": {
     "vscode": "^1.97.0"
