--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "directory-drag-drop",
   "displayName": "Directory Drag Drop",
   "description": "It restores old VS Code behavior on dragging and dropping a folder to the editor area (it opens as a workspace in the same window)",
+  "publisher": "PeterAyad",
   "version": "0.0.1",
   "icon": "icon/6214098.png",
   "repository": {"url": "https://github.com/PeterAyad/Directory-Drag-Drop"},
