--- a/package.json
+++ b/package.json
@@ -3,9 +3,11 @@
   "displayName": "Directory Drag Drop",
   "description": "It restores old VS Code behavior on dragging and dropping a folder to the editor area (it opens as a workspace in the same window)",
   "publisher": "PeterAyad",
-  "version": "0.0.1",
+  "version": "1.0.1",
   "icon": "icon/6214098.png",
-  "repository": {"url": "https://github.com/PeterAyad/Directory-Drag-Drop"},
+  "repository": {
+    "url": "https://github.com/PeterAyad/Directory-Drag-Drop"
+  },
   "engines": {
     "vscode": "^1.97.0"
   },
@@ -29,8 +31,5 @@
     "@vscode/test-cli": "^0.0.10",
     "@vscode/test-electron": "^2.4.1",
     "eslint": "^9.19.0"
-  },
-  "dependencies": {
-    "uri-js": "^4.4.1"
   }
 }
